Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Harp</h1>
-      <h2 class="project-tagline">HARP  is  the  instrument  used   by  King david.  HARP  search  engine   is  simillar   to  Google.  HARP  Search  engine  is  invented   in  JDollar  Technology  by  wilmix  jemin  j.</h2>
+      <h2 class="project-tagline">HARP  is  the  instrument  used   by  King david.  HARP  search  engine   is  simillar   to  Google.  HARP  Search  engine  is  invented   in JAS  by  wilmix  jemin  j.</h2>
       <a href="https://github.com/wilmix8/HARP" class="btn">View on GitHub</a>
       <a href="https://github.com/wilmix8/HARP/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilmix8/HARP/tarball/master" class="btn">Download .tar.gz</a>
@@ -26,7 +26,7 @@
 
 <p>HARP  search  engine   is  simillar   to  Google.</p>
 
-<p>HARP  Search  engine  is  invented   in  JDollar  Technology  by  wilmix  jemin  j.</p>
+<p>HARP  Search  engine  is  invented   in  JAS  Technology  by  wilmix  jemin  j.</p>
 
 <p>Today many  hackers  hack  the   websites   in  Google;</p>
 
@@ -50,6 +50,8 @@
 <p>d)  Used  for  advertisements</p>
 
 <p>e)  Used   for  WRIT  cloud  websites..</p>
+
+<p>Note: This  Project  is  under   construction.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/wilmix8/HARP">Harp</a> is maintained by <a href="https://github.com/wilmix8">wilmix8</a>.</span>
